// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip rtl render component should be rendered correctly in RTL direction 1`] = `<span />`;

exports[`Tooltip should hide when mouse leave antd disabled component Button 1`] = `
<button
  class="ant-btn ant-btn-default"
  disabled=""
  type="button"
/>
`;

exports[`Tooltip should hide when mouse leave antd disabled component Switch 1`] = `
<button
  aria-checked="false"
  class="ant-switch ant-switch-disabled"
  disabled=""
  role="switch"
  type="button"
>
  <div
    class="ant-switch-handle"
  />
  <span
    class="ant-switch-inner"
  >
    <span
      class="ant-switch-inner-checked"
    />
    <span
      class="ant-switch-inner-unchecked"
    />
  </span>
</button>
`;

exports[`Tooltip support arrow props by default 1`] = `
<div>
  <div
    class="target ant-tooltip-open"
  >
    target
  </div>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        role="tooltip"
      />
    </div>
  </div>
</div>
`;

exports[`Tooltip support arrow props pass false to hide arrow 1`] = `
<div>
  <div
    class="target ant-tooltip-open"
  >
    target
  </div>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        role="tooltip"
      />
    </div>
  </div>
</div>
`;
